[package]
authors = ["semenInRussia"]
name = "org-roam-explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "./crates/bin/tags.rs"
name = "oroam-tags"

[[bin]]
path = "./crates/bin/nodes_by_title.rs"
name = "oroam-nodes"

[dependencies.org_roam_fetch]
path = "crates/org_roam_fetch"

[dependencies]
tokio = { version = "1.2", features = [ "rt", "macros", "fs", "test-util" ] }
inquire = "0.6.2"
