[package]
authors = ["semenInRussia"]
name = "org-roam-explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "./crates/bin/tags.rs"
name = "oroam-tags"

[[bin]]
path = "./crates/bin/nodes_by_title.rs"
name = "oroam-nodes"

[dependencies.emacsql]
path = "crates/emacsql"

[dependencies.org_roam_fetch]
path = "crates/org_roam_fetch"

[dependencies]
inquire = "0.6.2"
